<resources>
    <string name="app_name">simple math game kotlin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="game_fragment_label">Math Game</string>
    <string name="score_fragment_label">Score</string>
    <string name="login_fragment_label">Login</string>
    <string name="see_scores">see scores</string>
    <string name="play_again">play again</string>

    <string name="question">%s + %s = %s</string>
    <string name="check">check</string>
    <string name="string_score">Score: %s / %s</string>
    <string name="results">%s\'s score: %s / %s</string>
    <string name="play_game">play game</string>
    <string name="new_user">new user</string>
    <string name="username_hint">Username</string>
    <string name="your_mistakes">Your mistakes:</string>
</resources>