<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/GameFragment"
        android:name="com.example.simplemathgamekotlin.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/ScoreFragment" />
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/ScoreFragment"
        android:name="com.example.simplemathgamekotlin.ScoreFragment"
        android:label="@string/score_fragment_label"
        tools:layout="@layout/fragment_score">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/GameFragment" />
        <argument
            android:name="score"
            app:argType="integer" />
        <argument
            android:name="questionNumber"
            app:argType="integer" />
        <argument
            android:name="username"
            app:argType="string" />
        <action
            android:id="@+id/action_ScoreFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.simplemathgamekotlin.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_GameFragment"
            app:destination="@id/GameFragment" />
    </fragment>
</navigation>